--- a/media/less/mobile/products.less
+++ b/media/less/mobile/products.less
@@ -29,15 +29,13 @@
     }
   }
 
-  #page {
-    > header {
-      h1 {
-        font-weight: bold;
-        font-size: 15px;
-        line-height: normal;
-        margin-top: 5px;
-        white-space: normal;
-      }
+  > header {
+    h1 {
+      font-weight: bold;
+      font-size: 15px;
+      line-height: normal;
+      margin-top: 5px;
+      white-space: normal;
     }
   }
 
